--- a/q/133235.html
+++ b/q/133235.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>218</td><td>JavaScript Node.js</td><td>240807T162121Z</td><td><a href="https://codegolf.stackexchange.com/questions/133235/the-answer-to-life-the-universe-and-ascii-art/274757#274757">Andrew B</a></td></tr>
+<tr d-ix="0"><td>217</td><td>JavaScript Node.js</td><td>240807T162121Z</td><td><a href="https://codegolf.stackexchange.com/questions/133235/the-answer-to-life-the-universe-and-ascii-art/274757#274757">Andrew B</a></td></tr>
 <tr d-ix="1"><td>210</td><td>C gcc</td><td>171122T201139Z</td><td><a href="https://codegolf.stackexchange.com/questions/133235/the-answer-to-life-the-universe-and-ascii-art/148852#148852">gastropn</a></td></tr>
 <tr d-ix="2"><td>076</td><td>Jelly</td><td>170721T171336Z</td><td><a href="https://codegolf.stackexchange.com/questions/133235/the-answer-to-life-the-universe-and-ascii-art/133794#133794">Dennis</a></td></tr>
 <tr d-ix="3"><td>319</td><td>Javascript</td><td>170721T032407Z</td><td><a href="https://codegolf.stackexchange.com/questions/133235/the-answer-to-life-the-universe-and-ascii-art/133691#133691">sq2</a></td></tr>
@@ -50,7 +50,7 @@
 <tr d-ix="21"><td>1398</td><td>Add++</td><td>170719T062052Z</td><td><a href="https://codegolf.stackexchange.com/questions/133235/the-answer-to-life-the-universe-and-ascii-art/133237#133237">caird co</a></td></tr>
 <tr d-ix="22"><td>125</td><td>Bubblegum</td><td>170719T061645Z</td><td><a href="https://codegolf.stackexchange.com/questions/133235/the-answer-to-life-the-universe-and-ascii-art/133236#133236">Dennis</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 218 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s> 218 </s> 217 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;`jwq80
 13ntvk
@@ -64,9 +64,9 @@ b8mw
 5mbc
 4f9reg
 4f9r0g
-4f9r0g`.replace(/.+/g,c=&gt;parseInt(c,36).toString(2).slice(x=1)).replace(/./g,c=&gt;c-0?' ':'gtheanswertolifetheuniverseandeverythin'[x++%39])
+4f9r0g`.replace(/.+/g,c=&gt;parseInt(c,36).toString(2).slice(x=1)).replace(/./g,c=&gt;+c?' ':'gtheanswertolifetheuniverseandeverythin'[x++%39])
 </code></pre>
-<p><a href="https://tio.run/##TYzBb4MgHIXv/BW7LEJsqUprtYndeecdlyVF/EmpFBgwdfvnndmyZKfvveR978ZHHoRXLm6N7WDpmyU058tteq8ylDMTxwEVpSsLiYqDPE4VKlg9MIG@5H4W6OhdO6Ac6k6gtrpP6HBvBdr3tQf5g@wPF@rBaS4A72i6kxvRnB33AZ5NxGLDSkKjfYleGYkLQoNW63JuckL@eb@a2GZPyUNySmS8AjdhAh@tVj2s9cOoEdZXbjpYw2e8KpO8zmn6yOo3sghrgtVAtZW4x4Qs3w" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##TYzBT8MgHIXv/BVeTCGdbIWta006z549GpNR@itjZYCAbfWfr43GxNP3XvK@dxWjiDJonx6s62DpmyU2p/N1eq92qOA2jQNipS@ZQuygjlOFGK8HLtGX2s8SHYNvB1RA3UnUVrcJHW6tRPu@DqB@sPvDmQbwRkjAW5pv1UY2Jy9ChGebsNzwktDkXlLQVmFGaDR6Xc5NQcg/71fL5VN2lz1mKl1A2DhBSM7oHtb6YfUI66mwHazhM120zV7nPL/n9RtZpLPRGaDGKdxjQpZv" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <s>220</s> <s>219</s> <s>217</s> <s>213</s> 210 bytes</h1>
 
