--- a/q/274758.html
+++ b/q/274758.html
@@ -33,7 +33,7 @@
 <p>A full program that prints <code>0</code> unless provided an argument in which case it prints<sup>*</sup> the <em>Jellification</em><sup>**</sup> of that argument evaluated as Python code if possible or the raw argument as a string if not. (Satisfies the requirements since Brainfuck can only read from stdin, not from command line arguments).</p>
 <p><strong><a href="https://tio.run/##y0rNyan8DwI5mcUlGkWJeempGsaamgA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
 <p><sup>* an empty lists prints as nothing; a singleton list prints its element.</sup></p>
-<p><sup>** <code>None</code> becomes an empty list, <code>complex</code> numbers with no imaginary part become <code>float</code>s</sup></p>
+<p><sup>** <code>None</code> becomes an empty list; <code>complex</code> numbers with no imaginary part become <code>float</code>s; dictionaries become a list of their keys if all keys are strings; probably other things may happen in other exceptional cases</sup></p>
 </div>
 <div id="pu1" class="pu"><p>Javascript, 7 bytes</p>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
