--- a/q/274758.html
+++ b/q/274758.html
@@ -26,16 +26,30 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>000</td><td>Jelly</td><td>240807T174117Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274760#274760">Jonathan</a></td></tr>
-<tr d-ix="1"><td>007</td><td>Javascript</td><td>240807T173925Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274759#274759">l4m2</a></td></tr>
+<tr d-ix="0"><td>008</td><td>JavaScript Node.js</td><td>240807T182410Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274762#274762">Andrew B</a></td></tr>
+<tr d-ix="1"><td>011</td><td>Python 2</td><td>240807T182338Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274761#274761">mbomb007</a></td></tr>
+<tr d-ix="2"><td>000</td><td>Jelly</td><td>240807T174117Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274760#274760">Jonathan</a></td></tr>
+<tr d-ix="3"><td>007</td><td>Javascript</td><td>240807T173925Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274759#274759">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 0 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 8 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>_=&gt;'堛'
+</code></pre>
+<p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/Z9m@z/e1k796YLZ6v@T8/OK83NS9XLy0zXSNDQ1/wMA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>Python 2, 11 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>print id(0)
+</code></pre>
+<p>This program outputs the address of the object <code>0</code> in memory.</p>
+<p><a href="https://ato.pxeger.com/run?1=m728oLIkIz_PaMGCpaUlaboWqwuKMvNKFDJTNAw0ISJQCZgCAA" rel="nofollow noreferrer"><strong>Run it here</strong></a></p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 0 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <p>A full program that prints <code>0</code> unless provided an argument in which case it prints<sup>*</sup> the <em>Jellification</em><sup>**</sup> of that argument evaluated as Python code if possible or the raw argument as a string if not. (Satisfies the requirements since Brainfuck can only read from stdin, not from command line arguments).</p>
 <p><strong><a href="https://tio.run/##y0rNyan8DwI5mcUlGkWJeempGsaamgA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
 <p><sup>* an empty lists prints as nothing; a singleton list prints its element.</sup></p>
 <p><sup>** <code>None</code> becomes an empty list; <code>complex</code> numbers with no imaginary part become <code>float</code>s; dictionaries become a list of their keys if all keys are strings; probably other things may happen in other exceptional cases</sup></p>
 </div>
-<div id="pu1" class="pu"><p>Javascript, 7 bytes</p>
+<div id="pu3" class="pu"><p>Javascript, 7 bytes</p>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
 <div class="snippet-code">
 <pre class="snippet-code-js lang-js prettyprint-override"><code>alert()</code></pre>
