--- a/q/274758.html
+++ b/q/274758.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>003</td><td>Ruby</td><td>240807T194553Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274768#274768">Jordan</a></td></tr>
-<tr d-ix="1"><td>002</td><td>Bash</td><td>240807T192901Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274767#274767">G B</a></td></tr>
-<tr d-ix="2"><td>003</td><td>APL+WIN</td><td>240807T191534Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274766#274766">Graham</a></td></tr>
-<tr d-ix="3"><td>002</td><td>Batch</td><td>240807T184516Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274765#274765">Neil</a></td></tr>
+<tr d-ix="0"><td>002</td><td>Batch</td><td>240807T184516Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274765#274765">Neil</a></td></tr>
+<tr d-ix="1"><td>003</td><td>Ruby</td><td>240807T194553Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274768#274768">Jordan</a></td></tr>
+<tr d-ix="2"><td>002</td><td>Bash</td><td>240807T192901Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274767#274767">G B</a></td></tr>
+<tr d-ix="3"><td>003</td><td>APL+WIN</td><td>240807T191534Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274766#274766">Graham</a></td></tr>
 <tr d-ix="4"><td>nan</td><td></td><td>240807T182812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274763#274763">DLosc</a></td></tr>
 <tr d-ix="5"><td>006</td><td>QBasic</td><td>240807T183742Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274764#274764">DLosc</a></td></tr>
 <tr d-ix="6"><td>000</td><td>Jelly</td><td>240807T174117Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274760#274760">Jonathan</a></td></tr>
@@ -37,29 +37,29 @@
 <tr d-ix="8"><td>011</td><td>Python 2</td><td>240807T182338Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274761#274761">mbomb007</a></td></tr>
 <tr d-ix="9"><td>007</td><td>Javascript</td><td>240807T173925Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274759#274759">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 3 bytes</h1>
+<div id="pu0" class="pu"><h2>Batch, 2 bytes</h2>
+<pre><code>fc
+</code></pre>
+<p>Just launches the <code>fc</code> command-line utility, although not very usefully, as <code>fc</code> expects two parameters, so it outputs an error message to STDERR. This also works on DOS as well as Windows; if you're running on Windows, you could also use <code>hh</code> which launches HTML help (in its own window).</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 3 bytes</h1>
 <p>Prints the command-line arguments.</p>
 <pre class="lang-ruby prettyprint-override"><code>p$*
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsGCpaUlaboWiwtUtCAsqMDKaKVEJR2lJKVYqAAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 2 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 2 bytes</h1>
 
 <pre class="lang-bash prettyprint-override"><code>&gt;_
 </code></pre>
 <p><a href="https://tio.run/##S0oszvj/3y7@f07xfwA" rel="nofollow noreferrer" title="Bash – Try It Online">Try it online!</a></p>
 <p>Create a file named '_' in the current directory.</p>
 </div>
-<div id="pu2" class="pu"><h1>APL+WIN, 3 bytes</h1>
+<div id="pu3" class="pu"><h1>APL+WIN, 3 bytes</h1>
 <p>Outputs the current time to the nearest msec.</p>
 <pre><code>⎕ts
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlyPWooz0NJFFS/B/I5PqfxgUA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thang to Dyalog Classic</a></p>
-</div>
-<div id="pu3" class="pu"><h2>Batch, 2 bytes</h2>
-<pre><code>fc
-</code></pre>
-<p>Just launches the <code>fc</code> command-line utility, although not very usefully, as <code>fc</code> expects two parameters. This also works on DOS as well as Windows; there are some other options if you're running on Windows, such as <code>sc</code> (service control), <code>at</code> (original Windows NT task scheduler interface) and <code>hh</code> (HTML help).</p>
 </div>
 <div id="pu4" class="pu"><h1>Trivial answers that output command-line arguments</h1>
 <p>Many languages can easily read command-line args:</p>
