--- a/q/274665.html
+++ b/q/274665.html
@@ -26,16 +26,53 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>157</td><td>Ruby</td><td>240806T123657Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274731#274731">G B</a></td></tr>
-<tr d-ix="1"><td>253</td><td>Julia</td><td>240806T081152Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274726#274726">Carl</a></td></tr>
-<tr d-ix="2"><td>163</td><td>JavaScript Node.js</td><td>240806T032444Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274718#274718">l4m2</a></td></tr>
-<tr d-ix="3"><td>178</td><td>JavaScript ES7</td><td>240805T201142Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274713#274713">Arnauld</a></td></tr>
-<tr d-ix="4"><td>105</td><td>Charcoal</td><td>240804T210812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274679#274679">Neil</a></td></tr>
-<tr d-ix="5"><td>224</td><td>Picat</td><td>240805T050107Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274686#274686">Bubbler</a></td></tr>
-<tr d-ix="6"><td>024</td><td>Jelly</td><td>240804T210958Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274680#274680">Jonathan</a></td></tr>
-<tr d-ix="7"><td>181</td><td>Python + SymPy</td><td>240804T134410Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274669#274669">shape wa</a></td></tr>
+<tr d-ix="0"><td>169</td><td>Python + SymPy</td><td>240804T134410Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274669#274669">shape wa</a></td></tr>
+<tr d-ix="1"><td>157</td><td>Ruby</td><td>240806T123657Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274731#274731">G B</a></td></tr>
+<tr d-ix="2"><td>253</td><td>Julia</td><td>240806T081152Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274726#274726">Carl</a></td></tr>
+<tr d-ix="3"><td>163</td><td>JavaScript Node.js</td><td>240806T032444Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274718#274718">l4m2</a></td></tr>
+<tr d-ix="4"><td>178</td><td>JavaScript ES7</td><td>240805T201142Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274713#274713">Arnauld</a></td></tr>
+<tr d-ix="5"><td>105</td><td>Charcoal</td><td>240804T210812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274679#274679">Neil</a></td></tr>
+<tr d-ix="6"><td>224</td><td>Picat</td><td>240805T050107Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274686#274686">Bubbler</a></td></tr>
+<tr d-ix="7"><td>024</td><td>Jelly</td><td>240804T210958Z</td><td><a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int/274680#274680">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 157 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a> + <a href="https://www.sympy.org/en/index.html" rel="nofollow noreferrer">SymPy</a>, <s>181</s> 169 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>lambda n:[l for l in i.permutations(range(n+1))if all((a%f&gt;0)^(c%f&gt;0)for a,b,c in zip(l,l[1:],l[2:]+(1,))for f in sympy.factorint(b)if f)][0]
+import itertools as i,sympy
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=LY5BasNADEX3PYW6KGjINMRdBUN7EdcF2bVawVgzjJWFe5VuDCGFHim3ScfuRn-h_x7_-yfN9hl1OfPz6-Vk_Hi8_gYau3cCrZsAHDMEEAXZpyGPJyOTqBNm0o8BdVc5JwwUAiI98MvBvWG_ZgHJd74v8JckDD40Vd3-3ae63WHl3drh8p_mMc17pt5iFjXsipRd2xzaOxlTzAZiQ7YYwwQ0gfiV-B98XzxaPNuqysPR1ZBWFaM6txWXZcsb" rel="nofollow noreferrer">Attempt This Online!</a> (only tests up to n=7 because it gets slow otherwise)</p>
+<p>Relatively direct translation of the criteria laid out in the challenge description. No longer has a double application of <code>itertools.pairwise</code>, thanks to one of three improvements by @Jakque.</p>
+<p>Ungolfed:</p>
+<pre><code>import itertools
+import sympy
+
+def f(n):
+    # itertools.permutations generates permutations in lexicographic order
+    return [lst for lst in itertools.permutations(range(n + 1))
+                if meets_conditions(lst)][0]
+
+def meets_conditions(lst):
+    # condition 1 is really just condition 2 except there is no successor
+    #     for the prime factors to divide; using a successor
+    #     that is never divided by any prime factor works just as well
+    # the golfed code combines the nested all(all(z for z in y) for y in x)
+    #     into the form all(z for y in x for z in y)
+    return all(term_meets_conditions(prev, curr, next_)
+               for prev, curr, next_ in triplewise(lst + (1,)))
+
+def term_meets_conditions(prev, curr, next_):
+    # a XOR b &lt;=&gt; (not a) XOR (not b),
+    #     where a and b in this case denote divisibility by the prime factor
+    # sympy.factorint(0) returns {0: 1}, so we need to filter out keys of 0
+    return all((prev % prime_factor &gt; 0) ^ (next_ % prime_factor &gt; 0)
+               for prime_factor in sympy.factorint(curr) if prime_factor != 0)
+
+def triplewise(seq):
+    # in the golfed code: zip((l + [x])[0:], (l + [x])[1:], (l + [x])[2:])
+    #     is equivalent to zip(l[0:], l[1:], l[2:] + [x])
+    return zip(seq[0:], seq[1:], seq[2:])
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 157 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;n{(r=[0,0,1,8,12,158,853,11000,46988,1134848,4081198,243581246,526635830,44115776240,181186519640,p,231558565690988][n])&amp;&amp;[*0..n].permutation.find{0&gt;r-=1}}
 </code></pre>
@@ -49,26 +86,26 @@
 <p><a href="https://tio.run/##DY05asNgEIWvkipIaCJmn/mL5CJCRYyRUWEhvBTG5OzKwGve8vFuz9PrWL6Pr5/tPSEwkAEjAUdDkOZpYIkSBKTpYs4gqNrSFKHqQFMmKSy4NSflMMhKkK0ZGimwhRTAJdLiCcUtULLAUKEASULGmnFduKIH7FCOQzyaJCtGprrrPG3zeF4v6@PebQP1f8f@0dE4kvbj9XfvPpd@mJaJfJ6Pfw" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 <p>Still hardcoded but faster.</p>
 </div>
-<div id="pu1" class="pu"><h2>Julia, 253 bytes</h2>
+<div id="pu2" class="pu"><h2>Julia, 253 bytes</h2>
 <p>We restrict ourselves to cases n &lt;= 16 because a solution exists only in these cases. (Bubbler gives the proof in the comments.)</p>
 <pre><code>using Combinatorics;P=[[],[],[2],[3],[2],[5],[2,3],[7],[2],[3],[2,5],[11],[2,3],[13],[2,7],[2,3],[2]];f(n)=for s in permutations(collect(0:n)) d(k,p)=k&gt;n+1 ? false : s[k]%p==0; all(all(d(i,p)!=d(i+2,p) for p in P[s[i+1]+1]) for i in 1:n) &amp;&amp; return s end
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 163 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 163 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(n,i=0,...p)=&gt;1/p[n]?p.every((v,j)=&gt;!j||v&lt;2|p.every((u,k)=&gt;k&gt;1&amp;&amp;v%k&lt;!f[f[-~j*k]=k]?p[j-1]%k&lt;1^p[j+1]%k&lt;1:1))&amp;&amp;p:!p.includes(i)&amp;&amp;f(n,0,...p,i)||i-n&amp;&amp;f(n,1+i,...p)
 </code></pre>
 <p><a href="https://tio.run/##fY/NisMgFIX3fQqzmKCNOrXLNrYPElIoqQ5qUMmPMNTJq2duCXQxi1ndwweH@x17T/exG0ycmA8Pta5aYk@NPFDOeSTyIj5j49tr5Cqp4RvjRC3Qwuac6mN@45k6wO4iyjJ9uLrQjW7YYveulQ7ajWWiBS5uEKstngQhZRlPReTGd/38UCM2QDQIbO@pITkb5jcmKrNJrToMuFcT8kgicYZTwz1AqCqCnjuEuuDH0Cvehy8oImgTct79rBZ2JQkKLYUFrwF/F7zlwX1hC@gL@s@AXw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Store non-prime in <code>f</code></p>
 </div>
-<div id="pu3" class="pu"><h1>JavaScript (ES7), 178 bytes</h1>
+<div id="pu4" class="pu"><h1>JavaScript (ES7), 178 bytes</h1>
 <p>A quick attempt during my vacation. No time to golf this further.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(n,m=(o=0,2**n-1),...p)=&gt;m?(n=i=&gt;m&gt;&gt;i?n(-~i,m&amp;1&lt;&lt;i&amp;&amp;f(0,m^1&lt;&lt;i,...p,i)):o)(0):p.every((v,i)=&gt;(g=k=&gt;k&gt;v?1:v%k?g(k+1):(!(p[i-1]%k)^((q=p[i+1])+1&amp;&amp;!(q%k)))&amp;g(k,v/=k))(2))&amp;!o?o=p:o
 </code></pre>
 <p><a href="https://tio.run/##HY/BbsIwEETvfIVzwNoljhtzDFn7QyqQEHUik8Q2AVmqqvbX021P781oLnO/luvztob8amL68Ns2EES1ECRq1fFwiI1BpbXOSHZxECkwrQ0uQvMT1CJN3wcpB2jVcvnz/7EKiF1CaLHL2he/fgIULsnCSBPZyRZnurKf3AhTbbCDCvJ7aMx5P@EF4EGcanPG2khZwYNbRMlbVd6IHY4cq@QS5S5tQ1ph9i8RBQlzYvTMlqWuUXzthLil@Eyz13Ma@ZwYICKedt/bLw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>106</s> 105 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>106</s> 105 bytes</h1>
 <pre><code>ＮθＦ…²φＦ⬤υ﹪ικ⊞υι≔Ｅ⊕θΦυ∧ι¬﹪ιλη≔Ｅη⟦κι⟦⟧⟧ζＦζ«≔⊟ιδ≔⊟ιεＦ⊕θ¿¬∨№ικ⊙ε﹪κλ¿⬤δ﹪κλ⊞ζ⁺⁺⟦κ⟧ι⎇§ι⁰⟦⁻§ηκεε⟧⟦⟦⟧§ηκ⟧»Ｉ⌊Φζ›Ｌιθ
 </code></pre>
 <p><a href="https://tio.run/##XVBBasMwEDzXr9jjClQovZWcTKDFEKem9GZ8UG3FFpalRJZKk9K3uysnaXEEks3M7uzs1J1wtRV6mjKzD34bhg/p8MBWyc46wDdhWomPHHaMwYykWmPgkNsmaIuKQ8@IKsLYRVhRYzqOqjWYiz1mpnZykMbLhjQ5PCvtSZ4KU9PE5q31@C@lWTwcuqVKx6HsSZs@VUX06eruxOA7ubtUFnaPitiG2FtMRmxuWTpioHaA0cSrw7UNxp83iv6OKP/W7K/e5voYQXPLnSM4cSh0GHF@yr6KiXB4l84Id8TUZ6aRX3HGA8FlrgyVXdHuPFnGS41lSc@Cq2jMKvlJCqfI6FqMlJ0yaggDXoKl8S9Oivi7kab13bz9Yba@mqan6f5T/wI" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Trying an &quot;efficient&quot; (it used to be able to reach <code>n=10</code> before I finished golfing; <a href="https://tio.run/##XVBBbsIwEDw3r/BxLbkS7ZVTilSEVGiEekM5uGRJrDg2ODYqVH17unagFUSK7OzMTmZm20i3tVIPw8Lsg1@F7hMdHPg021nHYC1NjfAs2I5zlia51hAEW9oqaAtKsJYTVIS@iWNFi3nfq9rAUu5hYbYOOzQeK9IU7FVpT/JEzE0Vl1fWw7@U5vERrLlVaQTbtKRNR1kSfL66O3P2nT1cmIXdgyK0IvR@hnGWVm4dcaZ2DKKJdwczG4wfE0V/J8C/mO3VW@LHCqp7bKzgLFihQx9VPtAZ6U7wInuM3xM@xlgqQ4TcL0yFXzFbmwzSW46EDZ03cEny0@wnK5wigzPZU2fKqC50qZ5LqfTruUMZr29oat@k5IfY5xqP6KKLlGE6DE@T4fGofwE" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a>) algorithm first that can reach <code>n=9</code> on TIO.</p>
@@ -119,11 +156,11 @@
 </code></pre>
 <p>Find the lexicographically earliest permutation that satisfies the conditions.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="http://picat-lang.org" rel="nofollow noreferrer">Picat</a>, 224 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="http://picat-lang.org" rel="noreferrer">Picat</a>, 224 bytes</h1>
 <pre><code>import cp.
 f(N)=A,N&lt;17=&gt;A=new_list(N+1),A::0..N,A.all_distinct,table_in(zip(A,A[2..N+1],A[3..N+1]++[1]),[{X,Y,Z}:X in 0..N,Y in 0..N,Z in 0..N,foreach(P in[2,3,5,7,11,13])Y&lt;1;Y mod P&gt;0;X*Z mod P&lt;1,(X+Z)mod P&gt;0 end]),A.solve.
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=PZDNaoNAFIXX8SmGQGCst0MmtqQYFeYBOmTpT0WsjnRAR9FphZY-STfZ5KG666Nk0pjsPu499xzu-Tn2siz04XB81_X90--fbPtu0KjsiVVjbgcMuE-3QcgCJaa8kaPG3KE2MM9bE8KBkaJp8srMpSo16OK1EblU-FP2mAFLN0bk0MyQeyHHSWlmQ_oVQQzJtxchqdC_VXyj5EZ1N4iifMN7M0k34MIjbIFSoG5mxz7dxajtKrQP17voLrmwTwFHTmLPCyRUZfIYGbvmQ5D5z-e2MBFBaC2uCfycSQmhD7a1WDA1ogCdGwA0DVKLGi9XlTlAq-lFLQFxQEZjpMZ-Nr2WeAI" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=PZDNaoNAFIXX8SmGQGCst0MmtqQYFeYBOmTpT0WsjnRAR9FphZY-STfZ5KG666Nk0pjsPu499xzu-Tn2siz04XB81_X90--fbPtu0KjsiVVjbgcMuE-3QcgCJaa8kaPG3KE2MM9bE8KBkaJp8srMpSo16OK1EblU-FP2mAFLN0bk0MyQeyHHSWlmQ_oVQQzJtxchqdC_VXyj5EZ1N4iifMN7M0k34MIjbIFSoG5mxz7dxajtKrQP17voLrmwTwFHTmLPCyRUZfIYGbvmQ5D5z-e2MBFBaC2uCfycSQmhD7a1WDA1ogCdGwA0DVKLGi9XlTlAq-lFLQFxQEZjpMZ-Nr2WeAI" rel="noreferrer">Attempt This Online!</a></p>
 <p>Given N, returns the lexicographically smallest permutation that satisfies the condition if such an answer exists, and fails otherwise. It fails immediately when N &gt;= 17 based on <a href="https://codegolf.stackexchange.com/questions/274665/lexicographically-earliest-permutation-of-the-initial-segment-of-nonnegative-int#comment591164_274665">my own comment</a>, so that I could hardcode the small primes instead of dynamically computing them.</p>
 <p>Solves N = 1 through 14 in a minute. For N = 16, I had to switch to <code>sat</code> solver and repeatedly constrain the answer to lexicographically earlier than already found to get the answer. The <code>cp</code> solver assigns values to variables in the given order (i.e. from left to right) and values from smallest to largest, so it finds the lexicographically smallest answer by default.</p>
 <p>The full list of solutions are presented below:</p>
@@ -157,12 +194,12 @@ f(N)=A,N&lt;17=&gt;A=new_list(N+1),A::0..N,A.all_distinct,table_in(zip(A,A[2..N+
 <li>Finally <code>A.solve</code> invokes the CP solver to instantiate A with the first solution found, if any.</li>
 </ul>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 24 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="noreferrer">Jelly</a>, 24 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="noreferrer">bytes</a></h1>
 <pre><code>.ṭ2ịÆfȧḍ¥€Ʋ3ƤḄ3ḍȦ
 ŻŒ!ÇƇḢ
 </code></pre>
 <p>A monadic link that accepts a non-negative integer and yields the permutation as a list if possible or the integer zero if not.</p>
-<p><strong><a href="https://tio.run/##AUIAvf9qZWxsef//LuG5rTLhu4vDhmbIp@G4jcKl4oKsxrIzxqThuIQz4biNyKYKxbvFkiHDh8aH4bii/8OHxZLhuZj//zY" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> (Times out for 8 or more.)</p>
+<p><strong><a href="https://tio.run/##AUIAvf9qZWxsef//LuG5rTLhu4vDhmbIp@G4jcKl4oKsxrIzxqThuIQz4biNyKYKxbvFkiHDh8aH4bii/8OHxZLhuZj//zY" rel="noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> (Times out for 8 or more.)</p>
 <h4>How?</h4>
 <p>Convert condition 1 into another instance of condition 2 by appending a <span class="math-container">\$\frac{1}{2}\$</span> to the right of each permutation being tested.</p>
 <pre><code>ŻŒ!ÇƇḢ - Main Link: non-negative integer, N
@@ -186,42 +223,6 @@ f(N)=A,N&lt;17=&gt;A=new_list(N+1),A::0..N,A.all_distinct,table_in(zip(A,A[2..N+
              Ḅ    - convert from binary
               3ḍ  - test if 3 divides each (i.e. each was either [0], [1,1,0] or [0,1,1])
                 Ạ - any and all?
-</code></pre>
-</div>
-<div id="pu7" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a> + <a href="https://www.sympy.org/en/index.html" rel="nofollow noreferrer">SymPy</a>, 181 bytes</h1>
-<pre class="lang-python prettyprint-override"><code>lambda n:next(l for l in i.permutations(range(n+1))if all(all((a%f&gt;0)^(c%f&gt;0)for f in sympy.factorint(b)if f)for(a,b),(_,c)in p(p(l+(1,)))))
-import itertools as i,sympy
-p=i.pairwise
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=LY5BagMxDEX3OYUoFCTihsyuBJKTlBbN1G4FHtnYCsmcpZuB0t6gh-ltGs9UIP5C_-u_j-882XvS-TMcn77OFh4ef38ij_0rgx7UXw0jhFQggijILvsyno1NklYsrG8eddsRSQCOEdsi34fTnp5xWLSFQwvXaczTLvBgqYga9i0U2h3Z9eTwxQ1082XMGLfYOWqzkTGnYiDmi6UUK3AFccuzTT7eiFjKRar_h79rfdr6VrrOQbenA-SlM6ASrc55XvUP" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Relatively direct translation of the criteria laid out in the challenge description. Manages to have a triply-nested loop and a double application of <code>itertools.pairwise</code>.</p>
-<p>Ungolfed:</p>
-<pre><code>import itertools
-import sympy
-
-def f(n):
-    # itertools.permutations generates permutations in lexicographic order
-    return next(lst for lst in itertools.permutations(range(n + 1))
-                    if meets_conditions(lst))
-
-def meets_conditions(lst):
-    # condition 1 is really just condition 2 except there is no successor
-    #     for the prime factors to divide
-    # a number that is never divided by any prime factor works just as well
-    return all(term_meets_conditions(prev, curr, next_)
-               for prev, curr, next_ in triplewise(lst + (1,)))
-
-def term_meets_conditions(prev, curr, next_):
-    # a XOR b &lt;=&gt; (not a) XOR (not b),
-    #     where a and b in this case denote divisibility by the prime factor
-    # sympy.factorint(0) returns {0: 1}, so we need to filter out keys of 0
-    return all((prev % prime_factor &gt; 0) ^ (next_ % prime_factor &gt; 0)
-               for prime_factor in sympy.factorint(curr) if prime_factor != 0)
-
-def triplewise(iterable):
-    p = itertools.pairwise
-    return ((prev, curr, next_)
-            for (prev, curr), (_, next_) in p(p(iterable)))
 </code></pre>
 </div>
 
