--- a/q/274775.html
+++ b/q/274775.html
@@ -26,10 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>107</td><td>PowerShell Core</td><td>240808T022802Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274778#274778">Julian</a></td></tr>
-<tr d-ix="1"><td>068</td><td>Python</td><td>240808T013510Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274777#274777">Albert.L</a></td></tr>
+<tr d-ix="0"><td>023</td><td>Uiua</td><td>240808T025342Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274779#274779">noodle p</a></td></tr>
+<tr d-ix="1"><td>107</td><td>PowerShell Core</td><td>240808T022802Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274778#274778">Julian</a></td></tr>
+<tr d-ix="2"><td>068</td><td>Python</td><td>240808T013510Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274777#274777">Albert.L</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell Core</a>, 107 bytes</h1>
+<div id="pu0" class="pu"><h1>Uiua, 23 bytes</h1>
+<pre><code>.&quot;24 hours&quot;
+print←⋅⋅⋅&amp;p
+</code></pre>
+<p><a href="https://uiua.org/pad?src=0_12_0-dev_4__LiIyNCBob3VycyIKcHJpbnTihpDii4Xii4Xii4UmcApkYXkgPSAiTW9uZGF5Igp4ID0gZGF5Lmxlbmd0aApwcmludCh4KQo=" rel="nofollow noreferrer">Try it!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell Core</a>, 107 bytes</h1>
 
 <pre class="lang-powershell prettyprint-override"><code>function print{$args}class D{D([string]$a){}[int]$length=24}[D]`
 $day = &quot;Monday&quot;
@@ -45,7 +52,7 @@ class D{               # Declare a class D
 [D]`                   # The back tick escapes the new line, making `$day` an object of class D 
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 68 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 68 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>class day:length=&quot;24 hours&quot;;\
 day = &quot;Monday&quot;
 x = day.length
