--- a/q/274775.html
+++ b/q/274775.html
@@ -26,15 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>023</td><td>Uiua</td><td>240808T025342Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274779#274779">noodle p</a></td></tr>
+<tr d-ix="0"><td>061</td><td>Uiua</td><td>240808T025342Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274779#274779">noodle p</a></td></tr>
 <tr d-ix="1"><td>107</td><td>PowerShell Core</td><td>240808T022802Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274778#274778">Julian</a></td></tr>
 <tr d-ix="2"><td>068</td><td>Python</td><td>240808T013510Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274777#274777">Albert.L</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Uiua, 23 bytes</h1>
-<pre><code>.&quot;24 hours&quot;
-print←⋅⋅⋅&amp;p
+<div id="pu0" class="pu"><h1>Uiua, 61 bytes</h1>
+<pre><code>print=ggg&amp;p
+day = &quot;Monday&quot;
+x = day.length
+print(x).&quot;24 hours&quot;
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_12_0-dev_4__LiIyNCBob3VycyIKcHJpbnTihpDii4Xii4Xii4UmcApkYXkgPSAiTW9uZGF5Igp4ID0gZGF5Lmxlbmd0aApwcmludCh4KQo=" rel="nofollow noreferrer">Try it!</a></p>
+<p>First, let's look at what the given program says in Uiua:</p>
+<pre><code>day = &quot;Monday&quot;    # Bind the name 'day' to the string.
+x = day.length    # Bind the name 'x' to a function which pushes the value
+                  # of 'day' and pushes twice the length of an array.
+print(x)          # Call a function 'print' after calling the function 'x'.
+</code></pre>
+<p><code>x</code> has to take an array as input, so we put it on the stack. <code>x</code> has three outputs, all of which are useless, so <code>print</code> has to three values and print &quot;24 hours&quot;. We kill two birds with one stone by using &quot;24 hours&quot; as the array <code>x</code> takes. <code>print</code> is defined to pop three stack values and print a string.</p>
+<p>If you prefer, the <code>.&quot;24 hours&quot;</code> section can be moved to its own line at the start of the program, but this way is a byte shorter and as far as I can tell is perfectly allowed.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell Core</a>, 107 bytes</h1>
 
