--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240808T031320Z
+"   /golfscore                                      20240808T033936Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/241212.html">Golf Conways Primordial Still-Life              : 0241212</a>
 <a href="q/274775.html">Make a GCSE students error work                 : 0274775</a>
 <a href="q/251101.html">A challenge for rookies                         : 0251101</a>
 <a href="q/274758.html">Do something you cant do in Brainfuck           : 0274758</a>
