--- a/q/274775.html
+++ b/q/274775.html
@@ -26,13 +26,24 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>126</td><td>Raku Perl 6 rakudo</td><td>240808T051046Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274784#274784">bb94</a></td></tr>
-<tr d-ix="1"><td>061</td><td>Uiua</td><td>240808T025342Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274779#274779">noodle p</a></td></tr>
-<tr d-ix="2"><td>071</td><td>JavaScript Node.js</td><td>240808T030639Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274781#274781">noodle p</a></td></tr>
-<tr d-ix="3"><td>107</td><td>PowerShell Core</td><td>240808T022802Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274778#274778">Julian</a></td></tr>
-<tr d-ix="4"><td>068</td><td>Python</td><td>240808T013510Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274777#274777">Albert.L</a></td></tr>
+<tr d-ix="0"><td>168</td><td>C++ GCC</td><td>240808T051944Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274785#274785">bb94</a></td></tr>
+<tr d-ix="1"><td>126</td><td>Raku Perl 6 rakudo</td><td>240808T051046Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274784#274784">bb94</a></td></tr>
+<tr d-ix="2"><td>061</td><td>Uiua</td><td>240808T025342Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274779#274779">noodle p</a></td></tr>
+<tr d-ix="3"><td>071</td><td>JavaScript Node.js</td><td>240808T030639Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274781#274781">noodle p</a></td></tr>
+<tr d-ix="4"><td>107</td><td>PowerShell Core</td><td>240808T022802Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274778#274778">Julian</a></td></tr>
+<tr d-ix="5"><td>068</td><td>Python</td><td>240808T013510Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274777#274777">Albert.L</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, 126 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C++ (GCC)</a>, 168 bytes</h1>
+<pre class="lang-cpp prettyprint-override"><code>#include&lt;stdio.h&gt;
+struct A{A*length;void operator=(const char*s){}};void print(A*a){printf(&quot;24 hours&quot;);}int main(){A day,*x;
+day = &quot;Monday&quot;;
+x = day.length;
+print(x);
+}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=NY5NCsIwEEb3OUWom6RoF-JCiBVyAM8gIWmbQE1KfqQSchI33QhuPJC3Mdq6GOZ9MzDz7i8-9MF969xxPk2P4NvN_v1cKc37IJqD80KZSh6B8zZwD2mkZd_ozktyNUpAMzSWeWNrxI12HnLJbOlwTGneD1Zpj2jJcPxhi4rtDkoTrCswSXkCL0xphCOFgt3W5UhA7rCGxcnoTAUBY06ZquUvmG-OmIA0-y7af_0P" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, 126 bytes</h1>
 <pre class="lang-perl prettyprint-override"><code>use MONKEY-TYPING;augment class Str {method length {&quot;24 hours&quot;}};my \day:=$;my \x:=$;
 day = &quot;Monday&quot;;
 x = day.length;
@@ -40,7 +51,7 @@ print(x)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72kKDG7dMGCpaUlaboWN-tKi1MVfP39vF0jdUMiAzz93K0TS9NzU_NKFJJzEouLFYJLihSqc1NLMvJTFHJS89JLMhSqlYxMFDLyS4uKlWprrXMrFWJSEiutbFXAzAoQgwsooGCroOSbnwdkKVlzVQB5QJYexARrroKizLwSjQpNiCugjoE5CgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1>Uiua, 61 bytes</h1>
+<div id="pu2" class="pu"><h1>Uiua, 61 bytes</h1>
 <pre><code>print=ggg&amp;p
 day = &quot;Monday&quot;
 x = day.length
@@ -56,7 +67,7 @@ print(x)          # Call a function 'print' after calling the function 'x'.
 <p><code>x</code> has to take an array as input, so we put it on the stack. <code>x</code> has three outputs, all of which are useless, so <code>print</code> has to three values and print &quot;24 hours&quot;. We kill two birds with one stone by using &quot;24 hours&quot; as the array <code>x</code> takes. <code>print</code> is defined to pop three stack values and print a string.</p>
 <p>If you prefer, the <code>.&quot;24 hours&quot;</code> section can be moved to its own line at the start of the program, but this way is a byte shorter and as far as I can tell is perfectly allowed.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 71 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 71 bytes</h1>
 <pre class="lang-javascript prettyprint-override"><code>print=_=&gt;console.log(&quot;24 hours&quot;)
 day = &quot;Monday&quot;
 x = day.length
@@ -64,7 +75,7 @@ print(x)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGCpaUlaboWN90LijLzSmzjbe2S8_OK83NS9XLy0zWUjEwUMvJLi4qVNLlSEisVbBWUfPPzgCwlrgogB8jQy0nNSy_J4AJr16jQhBgHNRVmOgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell Core</a>, 107 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell Core</a>, 107 bytes</h1>
 
 <pre class="lang-powershell prettyprint-override"><code>function print{$args}class D{D([string]$a){}[int]$length=24}[D]`
 $day = &quot;Monday&quot;
@@ -80,7 +91,7 @@ class D{               # Declare a class D
 [D]`                   # The back tick escapes the new line, making `$day` an object of class D 
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 68 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 68 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>class day:length=&quot;24 hours&quot;;\
 day = &quot;Monday&quot;
 x = day.length
