--- a/q/274758.html
+++ b/q/274758.html
@@ -26,94 +26,110 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>011</td><td>Python 3</td><td>240808T061951Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274788#274788">Sisyphus</a></td></tr>
-<tr d-ix="1"><td>004</td><td>Funge98</td><td>240808T003330Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274774#274774">Alt Shif</a></td></tr>
-<tr d-ix="2"><td>046</td><td>C++</td><td>240807T223946Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274770#274770">Redz</a></td></tr>
-<tr d-ix="3"><td>009</td><td>JavaScript Node.js</td><td>240807T182410Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274762#274762">Andrew B</a></td></tr>
-<tr d-ix="4"><td>002</td><td>Batch</td><td>240807T184516Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274765#274765">Neil</a></td></tr>
-<tr d-ix="5"><td>003</td><td>Ruby</td><td>240807T194553Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274768#274768">Jordan</a></td></tr>
-<tr d-ix="6"><td>002</td><td>Bash</td><td>240807T192901Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274767#274767">G B</a></td></tr>
-<tr d-ix="7"><td>003</td><td>APL+WIN</td><td>240807T191534Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274766#274766">Graham</a></td></tr>
-<tr d-ix="8"><td>nan</td><td></td><td>240807T182812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274763#274763">DLosc</a></td></tr>
-<tr d-ix="9"><td>006</td><td>QBasic</td><td>240807T183742Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274764#274764">DLosc</a></td></tr>
-<tr d-ix="10"><td>000</td><td>Jelly</td><td>240807T174117Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274760#274760">Jonathan</a></td></tr>
-<tr d-ix="11"><td>011</td><td>Python 2</td><td>240807T182338Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274761#274761">mbomb007</a></td></tr>
-<tr d-ix="12"><td>007</td><td>Javascript</td><td>240807T173925Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274759#274759">l4m2</a></td></tr>
+<tr d-ix="0"><td>002</td><td>PARI/GP</td><td>240808T065020Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274792#274792">alephalp</a></td></tr>
+<tr d-ix="1"><td>011</td><td>Python 3</td><td>240808T061951Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274788#274788">Sisyphus</a></td></tr>
+<tr d-ix="2"><td>004</td><td>Funge98</td><td>240808T003330Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274774#274774">Alt Shif</a></td></tr>
+<tr d-ix="3"><td>046</td><td>C++</td><td>240807T223946Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274770#274770">Redz</a></td></tr>
+<tr d-ix="4"><td>009</td><td>JavaScript Node.js</td><td>240807T182410Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274762#274762">Andrew B</a></td></tr>
+<tr d-ix="5"><td>002</td><td>Batch</td><td>240807T184516Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274765#274765">Neil</a></td></tr>
+<tr d-ix="6"><td>003</td><td>Ruby</td><td>240807T194553Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274768#274768">Jordan</a></td></tr>
+<tr d-ix="7"><td>002</td><td>Bash</td><td>240807T192901Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274767#274767">G B</a></td></tr>
+<tr d-ix="8"><td>003</td><td>APL+WIN</td><td>240807T191534Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274766#274766">Graham</a></td></tr>
+<tr d-ix="9"><td>nan</td><td></td><td>240807T182812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274763#274763">DLosc</a></td></tr>
+<tr d-ix="10"><td>006</td><td>QBasic</td><td>240807T183742Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274764#274764">DLosc</a></td></tr>
+<tr d-ix="11"><td>000</td><td>Jelly</td><td>240807T174117Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274760#274760">Jonathan</a></td></tr>
+<tr d-ix="12"><td>011</td><td>Python 2</td><td>240807T182338Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274761#274761">mbomb007</a></td></tr>
+<tr d-ix="13"><td>007</td><td>Javascript</td><td>240807T173925Z</td><td><a href="https://codegolf.stackexchange.com/questions/274758/do-something-you-cant-do-in-brainfuck/274759#274759">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Python 3, 11 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 2 bytes</h1>
+<pre><code>\s</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMGCpaUlaboWi2KKIQwoHyYOAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><code>\s</code> prints the state of the PARI stack and heap, which is non-deterministic.</p>
+<p><strong>Example output:</strong></p>
+<pre><code> Top : 7fadf82bd000   Bottom : 7fadf7b1be00   Current stack : 7fadf82bcfb8
+ Used :                         9  long words  (0 K)
+ Available :                    999991  long words  (7808 K)
+ Occupation of the PARI stack :   0.00 percent
+ 1 objects on heap occupy 9 long words
+
+ 10 variable names used (10 user + 0 private) out of 65535
+</code></pre>
+<p>Copied from <a href="https://codegolf.stackexchange.com/a/250662/9288">my answer to another challenge</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1>Python 3, 11 bytes</h1>
 <pre class="lang-py prettyprint-override"><code>open(*'ww')
 </code></pre>
 <p>Create a file called <code>w</code> in the current directory.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://esolangs.org/wiki/Funge-98" rel="nofollow noreferrer">Funge-98</a>, 4 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://esolangs.org/wiki/Funge-98" rel="nofollow noreferrer">Funge-98</a>, 4 bytes</h1>
 <pre><code>6y,@
 </code></pre>
 <p><a href="https://tio.run/##S0pNK81LT9W1tNAtqAQz//83q9Rx@P8fAA" rel="nofollow noreferrer" title="Befunge-98 (PyFunge) – Try It Online">Try it online!</a></p>
 <p>Outputs the operating system's path separator (<code>/</code> for POSIX, <code>\</code> for Windows).</p>
 </div>
-<div id="pu2" class="pu"><h1>C++, 46 bytes</h1>
+<div id="pu3" class="pu"><h1>C++, 46 bytes</h1>
 <pre><code>#include&lt;ios&gt;
 main(){freopen(&quot;x&quot;,&quot;w&quot;,stdout);}
 </code></pre>
 <p>Creates a file called 'x' in the current directory (if x does not exist). I think this still counts.</p>
 <p><a href="https://tio.run/##Sy4o0E1PTv7/XzkzLzmnNCXVJjO/2I4rNzEzT0OzOq0oNb8gNU9DqUJJR6lcSae4JCW/tETTuvb/fwA" rel="nofollow noreferrer" title="C++ (gcc) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 9 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 9 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>_=&gt;Date()
 </code></pre>
 <p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/Z9m@z/e1s4lsSRVQ/N/cn5ecX5Oql5OfrpGmoam5n8A" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h2>Batch, 2 bytes</h2>
+<div id="pu5" class="pu"><h2>Batch, 2 bytes</h2>
 <pre><code>fc
 </code></pre>
 <p>Just launches the <code>fc</code> command-line utility, although not very usefully, as <code>fc</code> expects two parameters, so it outputs an error message to STDERR. This also works on DOS as well as Windows; if you're running on Windows, you could also use <code>hh</code> which launches HTML help (in its own window).</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 3 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 3 bytes</h1>
 <p>Prints the command-line arguments.</p>
 <pre class="lang-ruby prettyprint-override"><code>p$*
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsGCpaUlaboWiwtUtCAsqMDKaKVEJR2lJKVYqAAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="noreferrer">Bash</a>, 2 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="noreferrer">Bash</a>, 2 bytes</h1>
 
 <pre class="lang-bash prettyprint-override"><code>&gt;_
 </code></pre>
 <p><a href="https://tio.run/##S0oszvj/3y7@f07xfwA" rel="noreferrer" title="Bash – Try It Online">Try it online!</a></p>
 <p>Create a file named '_' in the current directory.</p>
 </div>
-<div id="pu7" class="pu"><h1>APL+WIN, 3 bytes</h1>
+<div id="pu8" class="pu"><h1>APL+WIN, 3 bytes</h1>
 <p>Outputs the current time to the nearest msec.</p>
 <pre><code>⎕ts
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlyPWooz0NJFFS/B/I5PqfxgUA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thang to Dyalog Classic</a></p>
 </div>
-<div id="pu8" class="pu"><h1>Trivial answers that output command-line arguments</h1>
+<div id="pu9" class="pu"><h1>Trivial answers that output command-line arguments</h1>
 <p>Many languages can easily read command-line args:</p>
 <h1><a href="https://github.com/dloscutoff/pip" rel="nofollow noreferrer">Pip</a>, 1 byte</h1>
 <pre><code>a
 </code></pre>
 <p>Outputs the first command-line argument. <a href="https://ato.pxeger.com/run?1=m724ILNgwYKlpSVpuhYLEyE0lLsk2sQoFsoGAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://en.wikipedia.org/wiki/QBasic" rel="nofollow noreferrer">QBasic</a>, 6 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://en.wikipedia.org/wiki/QBasic" rel="nofollow noreferrer">QBasic</a>, 6 bytes</h1>
 <pre><code>?TIMER
 </code></pre>
 <p>Outputs the number of seconds since midnight.</p>
 <p><a href="https://archive.org/details/msdos_qbasic_megapack" rel="nofollow noreferrer">Try it at Archive.org!</a></p>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 0 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu11" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 0 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <p>A full program that prints <code>0</code> unless provided an argument in which case it prints<sup>*</sup> the <em>Jellification</em><sup>**</sup> of that argument evaluated as Python code if possible or the raw argument as a string if not. (Satisfies the requirements since Brainfuck can only read from stdin, not from command line arguments).</p>
 <p><strong><a href="https://tio.run/##y0rNyan8DwI5mcUlGkWJeempGsaamgA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
 <p><sup>* an empty lists prints as nothing; a mixed list (characters and numbers) smashes its element's representations together, a singleton list prints its element.</sup></p>
 <p><sup>** <code>None</code> becomes an empty list; <code>complex</code> numbers with no imaginary part become <code>float</code>s; dictionaries become a list of their keys if all keys are strings; probably other things may happen in other exceptional cases</sup></p>
 </div>
-<div id="pu11" class="pu"><h1>Python 2, 11 bytes</h1>
+<div id="pu12" class="pu"><h1>Python 2, 11 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>print id(0)
 </code></pre>
 <p>This program outputs the address of the object <code>0</code> in memory.</p>
 <p><a href="https://ato.pxeger.com/run?1=m728oLIkIz_PaMGCpaUlaboWqwuKMvNKFDJTNAw0ISJQCZgCAA" rel="nofollow noreferrer"><strong>Run it here</strong></a></p>
 </div>
-<div id="pu12" class="pu"><p>Javascript, 7 bytes</p>
+<div id="pu13" class="pu"><p>Javascript, 7 bytes</p>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
 <div class="snippet-code">
 <pre class="snippet-code-js lang-js prettyprint-override"><code>alert()</code></pre>
