--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240808T075112Z
+"   /golfscore                                      20240808T075532Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/45378.html">Join N copies of a snippet to produce N^2 charac: 0045378</a>
 <a href="q/274775.html">Make a GCSE students error work                 : 0274775</a>
 <a href="q/218284.html">Output Buffalo buffalo Buffalo buffalo buffalo b: 0218284</a>
 <a href="q/274758.html">Do something you cant do in Brainfuck           : 0274758</a>
