--- a/q/45378.html
+++ b/q/45378.html
@@ -60,32 +60,32 @@
 <blockquote>
 <p><em>Here I'm requesting</em> <code>103,307^2</code>, <em>or</em> <code>10,672,336,249 (10.67 bn)</code>, <em>copies of the equal sign (<code>=</code>)</em></p>
 </blockquote>
-<pre><code>( time ( nice echo '103307 =' | mawk2ultra '
+<pre><code>( time ( echo '103307 =' | mawk2ultra '
 
-function _____(___, __, _, ____) {
+function _____(___,__,_,____) {
 
     if ((___+=_++)&lt;++_+_)
-        return ___--&lt;_+!(_=__)?(___?____:_):\
-                (_=(_)_ (_)_)+--___?(_ _)__:_
+        return ___--&lt;_+!(_=__) ? (___?____:_) : \
+                 (_=(_)_ (_)_)+--___ ? (_ _)__:_
     _ = sprintf(&quot;%.*d&quot;, (____=(_*_*_)^_^_&lt;___) \
-                ? int(sqrt(___--))+!!_:___,!_)
-    gsub(/./, __, _)
-    if (____ &amp;&amp; gsub(/./, _, _))_ = substr(_,length(_)-___)
-    gsub(/./, _, _)
+                 ? int(sqrt(___--)) : ___, !_)
+    gsub(/./,__,_)
+    if (____ &amp;&amp; gsub(//,_,_))_ = substr(_, length(_)-___)
+    gsub(/./,_,_)
     return _
 } { 
     print _____($1,$2,RS=_) }' ) | pvE9 ) | xxh128sum | gcat -b
 </code></pre>
 <blockquote>
 </blockquote>
-<pre><code>     out9: 9.94GiB 0:00:04 [2.45GiB/s] [2.45GiB/s] [&lt;=&gt;]
-    ( nice echo '103307 =' | mawk2ultra ; )  
+<pre><code>     out9: 9.94GiB 0:00:03 [2.72GiB/s] [2.72GiB/s] [&lt;=&gt;]
+     ( echo '103307 =' | mawk2ultra ; ) 
 
-     0.22s user 1.81s system 50% cpu 4.076 total
+     0.22s user 1.88s system 57% cpu 3.677 total
      1  3ca9d5133bee48cba24e96f61c833f8c  stdin
 </code></pre>
 <hr />
-<pre><code>  ( time ( nice echo '103307 =' |
+<pre><code>( time ( echo '103307 =' |
 
      perl5 -anle 'sub __ { @_[0] x @_[1]**2 } 
       
@@ -94,7 +94,7 @@ function _____(___, __, _, ____) {
 <blockquote>
 </blockquote>
 <pre><code>     out9: 9.94GiB 0:00:04 [2.44GiB/s] [2.44GiB/s] [&lt;=&gt; ]
-     ( nice echo '103307 =' | perl5 -anle ; )  
+     ( echo '103307 =' | perl5 -anle ; )  
 
      0.72s user 1.77s system 60% cpu 4.085 total
      1  3ca9d5133bee48cba24e96f61c833f8c  stdin
